runs/2025-02-28-13-08-23/logs/DiffBind/build-success.log
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://p3m.dev/cran/__linux__/noble/latest
Bioconductor version 3.20 (BiocManager 1.30.25), R 4.4.2 (2024-10-31)
Installing package(s) 'DiffBind'
also installing the dependencies ‘soGGi’, ‘ChIPseeker’, ‘rGREAT’, ‘XLConnect’, ‘profileplyr’

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/soGGi_1.38.0.tar.gz'
Content type 'application/x-gzip' length 3533648 bytes (3.4 MB)
==================================================
downloaded 3.4 MB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/ChIPseeker_1.42.1.tar.gz'
Content type 'application/x-gzip' length 7594721 bytes (7.2 MB)
==================================================
downloaded 7.2 MB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/rGREAT_2.8.0.tar.gz'
Content type 'application/x-gzip' length 2889239 bytes (2.8 MB)
==================================================
downloaded 2.8 MB

trying URL 'https://p3m.dev/cran/__linux__/noble/latest/src/contrib/XLConnect_1.2.0.tar.gz'
Content type 'binary/octet-stream' length 23985294 bytes (22.9 MB)
==================================================
downloaded 22.9 MB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/profileplyr_1.22.0.tar.gz'
Content type 'application/x-gzip' length 2614790 bytes (2.5 MB)
==================================================
downloaded 2.5 MB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/DiffBind_3.16.0.tar.gz'
Content type 'application/x-gzip' length 6804650 bytes (6.5 MB)
==================================================
downloaded 6.5 MB

* installing *source* package ‘soGGi’ ...
** package ‘soGGi’ successfully unpacked and MD5 sums checked
** using staged installation
** R
** data
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘soGGi’ as ‘soGGi_1.38.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (soGGi)
* installing *source* package ‘ChIPseeker’ ...
** package ‘ChIPseeker’ successfully unpacked and MD5 sums checked
** using staged installation
** R
** data
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘ChIPseeker’ as ‘ChIPseeker_1.42.1_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (ChIPseeker)
* installing *source* package ‘rGREAT’ ...
** package ‘rGREAT’ successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C++ compiler: ‘g++ (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG  -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c RcppExports.cpp -o RcppExports.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG  -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c reduce_by_start_and_end.cpp -o reduce_by_start_and_end.o
g++ -std=gnu++17 -shared -L/usr/local/lib/R/lib -L/usr/local/lib -o rGREAT.so RcppExports.o reduce_by_start_and_end.o -L/usr/local/lib/R/lib -lR
installing to /mnt/library/00LOCK-rGREAT/00new/rGREAT/libs
** R
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** checking absolute paths in shared objects and dynamic libraries
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘rGREAT’ as ‘rGREAT_2.8.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (rGREAT)
* installing *binary* package ‘XLConnect’ ...
* ‘XLConnect’ was already a binary package and will not be rebuilt
* creating tarball
packaged installation of ‘XLConnect’ as ‘XLConnect_1.2.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (XLConnect)
* installing *source* package ‘DiffBind’ ...
** package ‘DiffBind’ successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C compiler: ‘gcc (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
using C++ compiler: ‘g++ (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -D_FILE_OFFSET_BITS=64 -I'/mnt/library/Rhtslib/include' -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c RcppExports.cpp -o RcppExports.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -D_FILE_OFFSET_BITS=64 -I'/mnt/library/Rhtslib/include' -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c bamReader.cpp -o bamReader.o
bamReader.cpp: In constructor ‘bode::BamReader::BamReader(const std::string&)’:
bamReader.cpp:22:5: error: ‘error’ was not declared in this scope; did you mean ‘perror’?
   22 |     error("file '%s' does not appear to be a BAM file (bad magic number)",filename.c_str());
      |     ^~~~~
      |     perror
make: *** [/usr/local/lib/R/etc/Makeconf:204: bamReader.o] Error 1
ERROR: compilation failed for package ‘DiffBind’
* removing ‘/mnt/library/DiffBind’
* installing *source* package ‘profileplyr’ ...
** package ‘profileplyr’ successfully unpacked and MD5 sums checked
** using staged installation
** R
** data
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘profileplyr’ as ‘profileplyr_1.22.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (profileplyr)

The downloaded source packages are in
	‘/tmp/Rtmplvrrer/downloaded_packages’
Old packages: 'bslib', 'cli', 'curl', 'evaluate', 'httr2', 'jsonlite',
  'openssl', 'pillar', 'pkgbuild', 'processx', 'ps', 'purrr', 'R6', 'Rcpp',
  'rlang', 'sessioninfo', 'systemfonts', 'testthat', 'textshaping', 'tinytex',
  'xfun', 'zip', 'class', 'foreign', 'KernSmooth', 'MASS', 'Matrix', 'nlme',
  'nnet', 'rpart', 'spatial'
Warning message:
In install.packages(...) :
  installation of package ‘DiffBind’ had non-zero exit status
Error: unexpected 'else' in "  else"
Execution halted

real	4m37.968s
user	2m54.253s
sys	0m22.332s
